--- a/src/app/sudoku/board/board.component.scss
+++ b/src/app/sudoku/board/board.component.scss
@@ -9,12 +9,22 @@ table.board {
     border: 1px solid black;
     padding: 0;
   }
-  tr.row3 td,
-  tr.row6 td {
-    border-top: 4px solid black;
+
+  &.rows2 tr:nth-child(2n),
+  &.rows3 tr:nth-child(3n),
+  &.rows4 tr:nth-child(4n) {
+    border-bottom: 4px solid black;
   }
-  td.col3,
-  td.col6 {
-    border-left: 4px solid black;
+
+  &.cols2 tr td:nth-child(2n),
+  &.cols3 tr td:nth-child(3n),
+  &.cols4 tr td:nth-child(4n) {
+    border-right: 4px solid black;
   }
+}
+
+:host.solved form {
+  display: inline-block;
+  background-color: greenyellow;
+  border: 4px solid greenyellow !important;
 }
