--- a/src/app/sudoku/home/home.component.html
+++ b/src/app/sudoku/home/home.component.html
@@ -1,21 +1,20 @@
-
-
-<app-board 
-  [class.solved]="solved"
-  [board]="board"
-  [dimensions]="dimensions"
-  (boardChange)="onCheck()"
-></app-board>
+<app-board [class.solved]="solved" [board]="board" [dimensions]="dimensions" (boardChange)="onCheck()"></app-board>
 <div class="button bar">
-  <button *ngIf="!locked" (click)="onNew()">Generate</button>
-  <input  *ngIf="!locked" type="number" min="2" max="4" [(ngModel)]="newDimensions.boxWidth" />
-  <input  *ngIf="!locked" type="number" min="2" max="4" [(ngModel)]="newDimensions.boxHeight" />
-  <input  *ngIf="!locked" type="number" min="2" max="4" [(ngModel)]="newDimensions.boxesX" />
-  <input  *ngIf="!locked" type="number" min="2" max="4" [(ngModel)]="newDimensions.boxesY" />
-<button (click)="onReset()">Reset</button>
-<button *ngIf="!locked" (click)="onLock()">Lock</button>
-<button *ngIf="locked" (click)="onEdit()">Edit</button>
-<button (click)="onLoad()">Load</button>
-<button *ngIf="locked" (click)="onSave()">Save</button>
+  <button (click)="onReset()">Reset</button>
+  <button *ngIf="locked" (click)="onEdit()">Edit</button>
+</div>
+<div class="button bar">
+  <label>Save name<input type="text" [(ngModel)]="saveKey" /></label>
+  <button (click)="onLoad()">Load</button>
+  <button *ngIf="locked" (click)="onSave()">Save</button>
+</div>
+<div *ngIf="!locked" class="dimensions">
+  <label>Box width<input type="number" min="2" max="4" [(ngModel)]="newDimensions.boxWidth" /></label>
+  <label># of boxes horizontally<input type="number" min="2" max="4" [(ngModel)]="newDimensions.boxesX" /></label>
+
+  <label>Box height<input type="number" min="2" max="4" [(ngModel)]="newDimensions.boxHeight" /></label>
+  <label># of boxes vertically<input type="number" min="2" max="4" [(ngModel)]="newDimensions.boxesY" /></label>
+  <button (click)="onNew()">Generate</button>
+  <button (click)="onLock()">Lock</button>
 </div>
 <pre>{{ board | json }}</pre>
