--- a/src/app/sudoku/board/board.component.html
+++ b/src/app/sudoku/board/board.component.html
@@ -1,11 +1,12 @@
 <form>
-  <table class="board rows{{dimensions?.boxHeight}} cols{{dimensions?.boxWidth}}">
+  <table class="board rows{{dimensions?.boxHeight}} cols{{dimensions?.boxWidth}}" [class.cross]="isCross">
     <tr *ngFor="let row of board; let rowIdx = index" class="row{{ rowIdx }}">
       <td *ngFor="let col of row; let colIdx = index" class="col{{ colIdx }}">
         <app-cell
           [cell]="col"
           [row]="rowIdx"
           [col]="colIdx"
+          [cross]=""
           (cellChange)="onBoardChange()"
           (navigate)="onNavigate($event)"
         ></app-cell>
